--- a/css/styles.css
+++ b/css/styles.css
@@ -459,7 +459,7 @@ img {
 
 .subscribe-form {
   display: flex;
-  gap: 16px;
+  gap: 24px;
 }
 .subscribe-text {
   font-family: "Roboto", sans-serif;
@@ -477,6 +477,11 @@ img {
 .subscribe-input {
   border: 1px solid #fff;
   background-color: transparent;
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  padding-left: 16px;
   border-radius: 4px;
   width: 264px;
   height: 40px;
@@ -489,16 +494,13 @@ img {
 }
 
 .subscribe-input::placeholder {
-  color: #fff;
-  font-size: 12px;
-  padding: 8px 16px;
+  color: #ffffff;
 }
 
 .subscribe-button {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
   border: none;
   border-radius: 4px;
   padding: 8px 24px;
@@ -508,6 +510,7 @@ img {
   line-height: 1.5;
   letter-spacing: 0.04em;
   color: #fff;
+  cursor: pointer;
   height: 40px;
   min-width: 165px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -517,7 +520,9 @@ img {
 .subscribe-button:focus {
   background-color: #404bbf;
 }
-.social-icon {
+.social-icon-send {
+  margin-left: 16px;
+  fill: #fff;
 }
 
 .backdrop {
@@ -569,17 +574,22 @@ img {
   right: 24px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: #e7e9fc;
   width: 24px;
   height: 24px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-button:hover,
 .modal-close-button:focus {
   border: none;
   background-color: #404bbf;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close-icon {
@@ -606,9 +616,9 @@ img {
   margin-bottom: 8px;
 }
 .modal-label {
-  display: inline-block;
+  display: block;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
@@ -621,24 +631,31 @@ img {
   height: 40px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  background-color: #fcfcfc;
+  background-color: transparent;
   padding-left: 38px;
   outline: transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
   border-color: #4d5ae5;
 }
 
-.modal-input:focus + .modal-icon {
-  fill: #4d5ae5;
-}
 .modal-icon {
   fill: #2e2f42;
   position: absolute;
   left: 16px;
   top: 50%;
   transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus + .modal-icon {
+  fill: #4d5ae5;
+}
+
+.modal-field-textarea {
+  margin-bottom: 16px;
 }
 
 .modal-textarea {
@@ -647,8 +664,18 @@ img {
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   outline: transparent;
   resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-textarea:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-textarea::placeholder {
@@ -689,7 +716,7 @@ img {
 }
 .modal-check-text {
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: #8e8f99;
   display: flex;
@@ -702,15 +729,18 @@ img {
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-right: 8px;
-  display: flex;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
   fill: transparent;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input-checkbox:checked + .modal-check-text .modal-check-item {
   background-color: #404bbf;
-  border: 1px solid #404bbf;
+  border: none;
   fill: #f4f4fd;
 }
 .modal-checkbox-link {
