--- a/css/styles.css
+++ b/css/styles.css
@@ -634,7 +634,7 @@ img {
   background-color: transparent;
   padding-left: 38px;
   outline: transparent;
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
